--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>火把节</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>YUQI Design</title>
 </head>
 <body>
 
+    <h1 style="color:darkviolet;font-weight: 900; font-family: SF pro display;">YUQI<br>Design</h1>
+    <h2 style="font-weight: 500; font-family: SF pro display;">Welcome to my space</h2>
+    <p style="color: dimgrey; font-weight: 300;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime beatae natus explicabo sequi rerum ipsam. Recusandae ducimus maxime error, et adipisci quibusdam asperiores pariatur praesentium quae, maiores commodi deserunt tenetur?</p>
 
-<div class="header">
-    <div class="tab">
-        <div class="nav fr">
-            <a class="item" href="#history">历史渊源<br>ꐩ ꋊ ꅐ ꀦ</a>
-            <a class="item" href="#min">民族地区<br>ꊿ ꋅ ꃅ ꄷ</a>
-            <a class="item" href="#activity">习俗活动<br>ꃅ ꀹ ꋻ ꅑ</a>
-        </div>
-    </div>
-</div>
-
-
-<div class="footer">链 接</div>
 
 </body>
 </html>
