--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>YUQI Design</title>
     <style>
+        
+        body{
+            font-family: sans-serif;
+        }
+        
         .blog li {
             width:80%;
             padding-top:15px;
