--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             font-family: sans-serif;
         }
         
+        figure{
+            width: 80%;
+        }
+
         .blog li {
             width:80%;
             padding-top:15px;
@@ -31,8 +35,8 @@
 </head>
 <body>
 
-    <h1 style="color:#4000b7;font-weight: 900; font-family: SF pro display;">YUQI<br>Design</h1>
-    <h2 style="font-weight: 500; font-family: SF pro display;">Welcome to my space</h2>
+    <h1 style="color:#4000b7;font-weight: 900;">YUQI<br>Design</h1>
+    <h2 style="font-weight: 500;">Welcome to my space</h2>
     
     <ul>
         <li>WORK</li>
