--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>YUQI Design</title>
+    <link rel="icon" href="./images/ICON.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:200,500,700" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
@@ -14,7 +16,7 @@
 <body>
    <div class="container">
        <nav class="nav">
-           <div class="logo"><img src="./images/logo.png" alt="LOGO here"></div>
+           <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
            <div class="left-nav">
                <a href="">WORKS</a>
                <a href="">BLOGS</a>
