--- a/index.html
+++ b/index.html
@@ -8,55 +8,43 @@
     <link rel="icon" href="./images/ICON.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
-    <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:200,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css">
+    <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
-</head>
+   </head>
 
 
 <body>
    <div class="container">
        <nav class="nav">
            <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
-           <div class="left-nav">
+           <div class="navitem">
                <a href="">WORKS</a>
                <a href="">BLOGS</a>
-           </div>
-           <div class="right-nav">
-                <a href="">EXPERIENCE</a>
-                <a href="">CONTACT</a>
+               <a href="">ABOUT</a>
+               <a href="">CONTACT</a>
            </div>
        </nav>
-       <div class="slogan">I come from<br>Panzhihua, Sichuan.</div>
+       <div class="slogan">I am Mitch.</div>
        <div class="activity">
-           <div class="item">
-               <ul>
-                   <li><div class="work">
-                        <img src="" alt="">
-                        <div class="title">
-                            SHARE-BOX
-                       </div>
-                   </div></li>
-                   <li><div class="work">
-                    <img src="" alt="">
-                    <div class="title">
-                        PREPAL
-                   </div>
-               </div></li>
-                   <li><div class="work">
-                    <img src="" alt="">
-                    <div class="title">
-                        FICARS
-                   </div>
-               </div></li>
-                   <li style="margin-right: 0;"><div class="work">
-                    <img src="" alt="">
-                    <div class="title">
-                        HOSPASS
-                   </div>
-               </div></li>
-               </ul>
+           <div class="work1">
+               <div class="intro">
+                   SHARE·BOX
+                   <span>Interaction Design</span>
+               </div>
+           </div>
+           <div class="work2">
+                <div class="intro">
+                    PREPAL
+                    <span>Interaction Design</span>
+                </div>
+           </div>
+           <div class="more">more works
+               <i class="iconfont icon-changyongicon-"></i>
            </div>
        </div>
    </div>
+   <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="150" src="./js/canvas.js"></script>
+   <canvas id="c_n18" width="1440" height="481" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 </body>
 </html>
