--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
        </div>
    </div>
    <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="150" src="./js/canvas.js"></script>
-   <canvas id="c_n18" width="1440" height="481" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
+   <canvas id="c_n18" width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 </body>
 </html>
