--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css">
     <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
-   </head>
+</head>
 
 
 <body>
@@ -19,7 +19,7 @@
        <nav class="nav">
            <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
            <div class="navitem">
-               <a href="">WORKS</a>
+               <a href="./work.html">WORKS</a>
                <a href="">BLOGS</a>
                <a href="">ABOUT</a>
                <a href="">CONTACT</a>
@@ -27,24 +27,82 @@
        </nav>
        <div class="slogan">I am Mitch.</div>
        <div class="activity">
-           <div class="work1">
+           <a class="work1" href="">
                <div class="intro">
                    SHARE·BOX
                    <span>Interaction Design</span>
                </div>
-           </div>
-           <div class="work2">
+            </a>
+           <a class="work2" href="">
                 <div class="intro">
                     PREPAL
                     <span>Interaction Design</span>
                 </div>
-           </div>
-           <div class="more">more works
+            </a>
+           <a class="moreWork" href="">more works
                <i class="iconfont icon-changyongicon-"></i>
-           </div>
+           </a>
        </div>
+
+       <div class="blog">
+            <a class="blogItem1" href="">
+                <img src="./images/douban.jpg" alt="">
+                <div class="blogIntro">
+                    <div class="blogTitle">
+                        Misuse of Modality in Douban APP
+                    </div>
+                    <span>2019.12.21</span>
+                </div>
+            </a>
+            <a class="blogItem2" href="">
+                <img src="./images/douban.jpg" alt="">
+                <div class="blogIntro">
+                    <div class="blogTitle">
+                        Modify of HUPU
+                    </div>
+                    <span>2020.1.4</span>
+                </div>
+            </a>
+            <a class="moreBlog" href="">more blogs
+                <i class="iconfont icon-changyongicon-"></i>
+            </a>
+        </div>
+
+        <div class="about">
+            <div class="aboutItem" id="name">
+                <span>My name is </span>
+                Mitch Wang
+            </div>
+            <div class="aboutItem" id="address">
+                <span>I come from</span>
+                Panzhihua, Sichuan
+            </div>
+            <div class="aboutItem" id="school">
+                <span>I graduate from</span>
+                ECUST, Shanghai
+            </div>
+            <div class="aboutItem" id="hobby">
+                <span>I major in Information Engineering, but I love</span>
+                Design
+            </div>
+        </div>
+
+        <footer class="contact">
+            <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
+            <div id="phone">
+                <span>WeChat & Phone</span>
+                152 1683 1797
+            </div>
+            <div id="mail">
+                <span>E-mail</span>
+                wangyuqi1717@163.com
+            </div>
+        </footer>
+
+
    </div>
-   <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="150" src="./js/canvas.js"></script>
-   <canvas id="c_n18" width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
+   <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
+
+   <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 </body>
 </html>
