--- a/work.html
+++ b/work.html
@@ -24,6 +24,25 @@
                 <a href="">CONTACT</a>
             </div>
         </nav>
+
+        <div class="works">
+            
+        </div>
+
+
+
+        <footer class="contact">
+            <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
+            <div id="phone">
+                <span>WeChat & Phone</span>
+                152 1683 1797
+            </div>
+            <div id="mail">
+                <span>E-mail</span>
+                wangyuqi1717@163.com
+            </div>
+        </footer>
+
     </div>
     <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
 
