--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WORKS of YUQI</title>
+    <title>Document</title>
     <link rel="icon" href="./images/ICON.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css">
     <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="./css/work.css">
+    <link rel="stylesheet" href="./css/blog.css">
 </head>
-
 <body>
     <div class="container">
         <nav class="nav">
@@ -24,54 +23,26 @@
                 <a href="">CONTACT</a>
             </div>
         </nav>
-
-        <h1>WORKS</h1>
-        <div class="works">
-            
-            <a href="" class="workItem">
-                <div class="intro" style="background-image: url();">
-                    SHARE·BOX
-                    <span>Interaction Design</span>
+        
+        <div class="blogs">
+            <a href="" class="bItem1">
+                <img src="" alt="">
+                <div class="bIntro">
+                    Misuse of Modality in Douban APP
+                    <span>2019.12.21</span>
                 </div>
             </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    PREPAL
-                    <span>Interaction Design</span>
+            <a href="" class="bItem2">
+                <img src="" alt="">
+                <div class="bIntro">
+                    Modify of HUPU
+                    <span>2020.1.4</span>
                 </div>
             </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    HOSPASS
-                    <span>Interaction Design</span>
-                </div>
-            </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    FICARS
-                    <span>Interaction Design</span>
-                </div>
-            </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    SoADM ECUST
-                    <span>Visual Design</span>
-                </div>
-            </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    SoD SJTU
-                    <span>Visual Design</span>
-                </div>
-            </a>
-            <a href="" class="workItem">
-                <div class="intro">
-                    more to come...
-                </div>
-            </a>
+           <div class="more">
+               more to come...
+           </div>
         </div>
-
-
 
         <footer class="contact">
             <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
@@ -88,7 +59,7 @@
     </div>
     <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
 
-    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
+   <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 
 </body>
 </html>
