--- a/blog.html
+++ b/blog.html
@@ -18,15 +18,15 @@
             <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
             <div class="navitem">
                 <a href="./work.html">WORKS</a>
-                <a href="">BLOGS</a>
+                <a href="./blog.html">BLOGS</a>
                 <a href="">ABOUT</a>
                 <a href="">CONTACT</a>
             </div>
         </nav>
         
         <div class="blogs">
-            <a href="" class="bItem1">
-                <img src="" alt="">
+            <a href="./blogDetail.html" class="bItem1">
+                <div class="blogImage"></div>
                 <div class="bIntro">
                     Misuse of Modality in Douban APP
                     <span>2019.12.21</span>
@@ -57,7 +57,7 @@
         </footer>
 
     </div>
-    <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
+    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="500" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 
