--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
             <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
             <div class="navitem">
                 <a href="./work.html">WORKS</a>
-                <a href="">BLOGS</a>
+                <a href="./blog.html">BLOGS</a>
                 <a href="">ABOUT</a>
                 <a href="">CONTACT</a>
             </div>
