--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
            <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
            <div class="navitem">
                <a href="./work.html">WORKS</a>
-               <a href="">BLOGS</a>
-               <a href="">ABOUT</a>
-               <a href="">CONTACT</a>
+               <a href="./blog.html">BLOGS</a>
+               <a href="#about">ABOUT</a>
+               <a href="#contact">CONTACT</a>
            </div>
        </nav>
        <div class="slogan">I am Mitch.</div>
@@ -46,7 +46,7 @@
 
        <div class="blog">
             <a class="blogItem1" href="">
-                <img src="./images/douban.jpg" alt="">
+                <!-- <img src="./images/douban1.jpg" alt=""> -->
                 <div class="blogIntro">
                     <div class="blogTitle">
                         Misuse of Modality in Douban APP
@@ -55,7 +55,7 @@
                 </div>
             </a>
             <a class="blogItem2" href="">
-                <img src="./images/douban.jpg" alt="">
+                <!-- <img src="./images/douban.jpg" alt=""> -->
                 <div class="blogIntro">
                     <div class="blogTitle">
                         Modify of HUPU
@@ -68,7 +68,7 @@
             </a>
         </div>
 
-        <div class="about">
+        <div class="about" id="about">
             <div class="aboutItem" id="name">
                 <span>My name is </span>
                 Mitch Wang
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <footer class="contact">
+        <footer class="contact" id="contact" >
             <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
             <div id="phone">
                 <span>WeChat & Phone</span>
@@ -101,7 +101,7 @@
 
 
    </div>
-   <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
+   <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="500" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 </body>
