--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
    <div class="container">
        <nav class="nav">
-           <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
+           <div class="logo"><a href="./index.html"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
            <div class="navitem">
                <a href="./work.html">WORKS</a>
                <a href="./blog.html">BLOGS</a>
@@ -39,13 +39,13 @@
                     <span>Interaction Design</span>
                 </div>
             </a>
-           <a class="moreWork" href="">more works
+           <a class="moreWork" href="./work.html">more works
                <i class="iconfont icon-changyongicon-"></i>
            </a>
        </div>
 
        <div class="blog">
-            <a class="blogItem1" href="">
+            <a class="blogItem1" href="./blogDetail.html">
                 <!-- <img src="./images/douban1.jpg" alt=""> -->
                 <div class="blogIntro">
                     <div class="blogTitle">
@@ -63,7 +63,7 @@
                     <span>2020.1.4</span>
                 </div>
             </a>
-            <a class="moreBlog" href="">more blogs
+            <a class="moreBlog" href="./blog.html">more blogs
                 <i class="iconfont icon-changyongicon-"></i>
             </a>
         </div>
