--- a/blogDetail.html
+++ b/blogDetail.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <script type="text/javascript" color="122, 255, 227" zindex="-1" opacity="1" count="200" src="./js/canvas.js"></script>
+    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="200" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 
