--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
             <a href="./blogDetail.html" class="bItem1">
                 <div class="blogImage"></div>
                 <div class="bIntro">
-                    Misuse of Modality in Douban APP
+                    Modality analysis of Douban APP
                     <span>2019.12.21</span>
                 </div>
             </a>
@@ -57,7 +57,7 @@
         </footer>
 
     </div>
-    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="200" src="./js/canvas.js"></script>
+    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 
