--- a/blogDetail.html
+++ b/blogDetail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Misuse of Modality in Douban APP</title>
+    <title>Modality analysis of Douban APP</title>
     <link rel="icon" href="./images/ICON.png">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
@@ -30,7 +30,7 @@
        
         <div class="content">
             <div class="title">
-                Misuse of Modality in Douban APP
+                Modality analysis of Douban APP
                 <span>2019.12.21</span>
             </div>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sequi suscipit culpa inventore tempora harum saepe, esse repellendus ipsam, est illo fugit corrupti praesentium numquam amet laboriosam ipsa, libero distinctio perferendis veniam excepturi hic. Veritatis magni earum excepturi fugiat debitis odit natus esse aspernatur eligendi! Tempore odit officia doloremque quisquam itaque earum odio architecto mollitia fugiat unde reiciendis aspernatur nemo nostrum modi corrupti explicabo minima quos vitae consectetur, incidunt veritatis libero! Quos velit doloribus voluptas autem aliquam, accusamus eius? Voluptatem magni perferendis doloribus consequuntur eaque inventore explicabo corporis, odit perspiciatis pariatur vitae corrupti modi eos sunt minus voluptate quaerat soluta quas molestias? Inventore laborum totam sunt explicabo sit, quo ad sequi sint autem aliquam repellat ex nobis rerum quos minima recusandae officia aliquid eveniet id. Cum incidunt accusantium dolore mollitia dolores facere repudiandae beatae quod cupiditate adipisci dolorum officiis eum, architecto nam quo numquam reprehenderit unde vero. Recusandae ipsa animi dignissimos sit, magni quae maxime incidunt soluta necessitatibus error sint? Eum, reprehenderit quo iste et temporibus dolores enim reiciendis asperiores aspernatur blanditiis repudiandae odit omnis impedit, nisi dignissimos sit in dolore rem voluptatum non velit, maxime tenetur? Amet repudiandae tempore sapiente, dolorem aliquid ducimus nulla reprehenderit accusantium quibusdam sequi error quis modi nisi odit voluptatibus! Nihil, blanditiis consequuntur eveniet ex, optio dolor exercitationem debitis qui aspernatur at facere fugiat aliquid? Consectetur necessitatibus veniam perspiciatis libero, hic incidunt iure nemo, non odio, ea ducimus quidem voluptas iusto vero itaque cupiditate ab at. Exercitationem perferendis enim accusamus sint repudiandae voluptates corrupti sequi recusandae voluptatum aut expedita nemo officia tempore doloribus natus voluptatem commodi totam odit dolorem, labore nesciunt eos rerum suscipit necessitatibus? Totam, ullam pariatur voluptatem id impedit corporis illum at quis beatae aliquam. Eos iste dicta cumque exercitationem adipisci ea? Numquam voluptatem beatae assumenda magnam, magni aliquam fugiat debitis vel quisquam molestias dignissimos corporis expedita architecto quod vero, eius error praesentium aperiam impedit sit? Vitae enim dignissimos culpa officia repellat labore inventore neque voluptas voluptates eveniet, aspernatur pariatur atque minus provident quod quasi eaque, quae, eum repudiandae sit nam assumenda quibusdam dolorum! Error quasi ducimus esse, qui cupiditate mollitia, velit explicabo officiis facilis, nostrum quo reprehenderit officia et minima! Officia nesciunt voluptate natus velit sunt, ducimus repellendus perspiciatis ea hic quas explicabo voluptas expedita asperiores sequi similique nisi aut beatae debitis? Quidem et quo quam aut ipsum aspernatur nam voluptas omnis cumque officiis quibusdam dolores modi consectetur nostrum laudantium, beatae quasi nihil placeat reiciendis debitis alias voluptate vero? Ipsa modi sapiente accusamus placeat ipsum aliquid quos iste et beatae libero dicta, dolores aperiam adipisci eligendi? Deleniti iste dicta molestiae, aspernatur nihil dignissimos ex maiores delectus facere. Blanditiis perferendis suscipit et sit nesciunt vel tenetur aperiam sapiente temporibus saepe minus incidunt aut recusandae facilis pariatur reiciendis quaerat dolore, accusantium quis dignissimos cum ex modi fugiat neque? Dolore atque ipsum impedit mollitia, quisquam reiciendis, praesentium nostrum, distinctio itaque hic qui exercitationem aut. Officia voluptates doloribus explicabo illum enim fugiat suscipit asperiores obcaecati! Pariatur aliquam, cumque dolores numquam ex accusamus sequi exercitationem necessitatibus esse?
@@ -61,7 +61,7 @@
 
     </div>
 
-    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="200" src="./js/canvas.js"></script>
+    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 
