--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- <img src="./images/douban1.jpg" alt=""> -->
                 <div class="blogIntro">
                     <div class="blogTitle">
-                        Misuse of Modality in Douban APP
+                        Modality analysis of Douban APP
                     </div>
                     <span>2019.12.21</span>
                 </div>
@@ -101,7 +101,7 @@
 
 
    </div>
-   <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".3" count="200" src="./js/canvas.js"></script>
+   <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script>
 
    <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
 </body>
