--- a/blog.html
+++ b/blog.html
@@ -1,65 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BLOGS of YUQI</title>
-    <link rel="icon" href="./images/ICON.png">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css">
-    <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="./css/blog.css">
-</head>
-<body>
+    <link rel="icon" href="./images/ICON.png" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link
+      rel="stylesheet"
+      href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css"
+    />
+    <link
+      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/blog.css" />
+    <script src="./js/p5.js"></script>
+  </head>
+  <body>
     <div class="container">
-        <nav class="nav">
-            <div class="logo"><a href="https://yuqidesign.github.io"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
-            <div class="navitem">
-                <a href="./work.html">WORKS</a>
-                <a href="./blog.html">BLOGS</a>
-                <a href="">ABOUT</a>
-                <a href="">CONTACT</a>
-            </div>
-        </nav>
-        
-        <div class="blogs">
-            <a href="./blogDetail.html" class="bItem1">
-                <div class="blogImage"></div>
-                <div class="bIntro">
-                    Modality analysis of Douban APP
-                    <span>2019.12.21</span>
-                </div>
-            </a>
-            <a href="" class="bItem2">
-                <img src="" alt="">
-                <div class="bIntro">
-                    Modify of HUPU
-                    <span>2020.1.4</span>
-                </div>
-            </a>
-           <div class="more">
-               more to come...
-           </div>
+      <nav class="nav">
+        <div class="logo">
+          <a href="https://yuqidesign.github.io"
+            ><img src="./images/logo.png" alt="LOGO here" />
+            <h1>YUQI Design</h1></a
+          >
         </div>
+        <div class="navitem">
+          <a href="./work.html">WORKS</a>
+          <a href="./blog.html">BLOGS</a>
+          <a href="">ABOUT</a>
+          <a href="">CONTACT</a>
+        </div>
+      </nav>
 
-        <footer class="contact">
-            <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
-            <div id="phone">
-                <span>WeChat & Phone</span>
-                152 1683 1797
-            </div>
-            <div id="mail">
-                <span>E-mail</span>
-                wangyuqi1717@163.com
-            </div>
-        </footer>
+      <div class="blogs">
+        <a href="./blogDetail.html" class="bItem1">
+          <div class="blogImage"></div>
+          <div class="bIntro">
+            Modality analysis of Douban APP
+            <span>2019.12.21</span>
+          </div>
+        </a>
+        <a href="" class="bItem2">
+          <img src="" alt="" />
+          <div class="bIntro">
+            Modify of HUPU
+            <span>2020.1.4</span>
+          </div>
+        </a>
+        <div class="more">
+          more to come...
+        </div>
+      </div>
 
+      <footer class="contact">
+        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <div id="phone">
+          <span>WeChat & Phone</span>
+          152 1683 1797
+        </div>
+        <div id="mail">
+          <span>E-mail</span>
+          wangyuqi1717@163.com
+        </div>
+      </footer>
     </div>
-    <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script>
 
-   <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
+    <script src="./js/Star.js"></script>
+    <script src="./js/canvas.js"></script>
+    <!-- <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script> -->
 
-</body>
+    <!-- <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas> -->
+  </body>
 </html>
