--- a/index.html
+++ b/index.html
@@ -1,108 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>YUQI Design</title>
-    <link rel="icon" href="./images/ICON.png">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css">
-    <link href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-</head>
+    <link rel="icon" href="./images/ICON.png" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link
+      rel="stylesheet"
+      href="https://at.alicdn.com/t/font_1615281_awip3ln3vkq.css"
+    />
+    <link
+      href="https://fonts.font.im/css?family=IBM+Plex+Sans:300,300i,500,500i,700,700i"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="./js/p5.js"></script>
+    <script src="./js/Star.js"></script>
+    <script src="./js/canvas.js"></script>
+  </head>
 
-
-<body>
-   <div class="container">
-       <nav class="nav">
-           <div class="logo"><a href="./index.html"><img src="./images/logo.png" alt="LOGO here"><h1>YUQI Design</h1></a></div>
-           <div class="navitem">
-               <a href="./work.html">WORKS</a>
-               <a href="./blog.html">BLOGS</a>
-               <a href="#about">ABOUT</a>
-               <a href="#contact">CONTACT</a>
-           </div>
-       </nav>
-       <div class="slogan">I am Mitch.</div>
-       <div class="activity">
-           <a class="work1" href="">
-               <div class="intro">
-                   SHARE·BOX
-                   <span>Interaction Design</span>
-               </div>
-            </a>
-           <a class="work2" href="">
-                <div class="intro">
-                    PREPAL
-                    <span>Interaction Design</span>
-                </div>
-            </a>
-           <a class="moreWork" href="./work.html">more works
-               <i class="iconfont icon-changyongicon-"></i>
-           </a>
-       </div>
-
-       <div class="blog">
-            <a class="blogItem1" href="./blogDetail.html">
-                <!-- <img src="./images/douban1.jpg" alt=""> -->
-                <div class="blogIntro">
-                    <div class="blogTitle">
-                        Modality analysis of Douban APP
-                    </div>
-                    <span>2019.12.21</span>
-                </div>
-            </a>
-            <a class="blogItem2" href="">
-                <!-- <img src="./images/douban.jpg" alt=""> -->
-                <div class="blogIntro">
-                    <div class="blogTitle">
-                        Modify of HUPU
-                    </div>
-                    <span>2020.1.4</span>
-                </div>
-            </a>
-            <a class="moreBlog" href="./blog.html">more blogs
-                <i class="iconfont icon-changyongicon-"></i>
-            </a>
+  <body>
+    <div class="container">
+      <nav class="nav">
+        <div class="logo">
+          <a href="./index.html"
+            ><img src="./images/logo.png" alt="LOGO here" />
+            <h1>YUQI Design</h1></a
+          >
         </div>
-
-        <div class="about" id="about">
-            <div class="aboutItem" id="name">
-                <span>My name is </span>
-                Mitch Wang
-            </div>
-            <div class="aboutItem" id="address">
-                <span>I come from</span>
-                Panzhihua, Sichuan
-            </div>
-            <div class="aboutItem" id="school">
-                <span>I graduate from</span>
-                ECUST, Shanghai
-            </div>
-            <div class="aboutItem" id="hobby">
-                <span>I major in Information Engineering, but I love</span>
-                Design
-            </div>
+        <div class="navitem">
+          <a href="./work.html">WORKS</a>
+          <a href="./blog.html">BLOGS</a>
+          <a href="#about">ABOUT</a>
+          <a href="#contact">CONTACT</a>
         </div>
+      </nav>
+      <div class="slogan">I am Mitch.</div>
+      <div class="activity">
+        <a class="work1" href="">
+          <div class="intro">
+            SHARE·BOX
+            <span>Interaction Design</span>
+          </div>
+        </a>
+        <a class="work2" href="">
+          <div class="intro">
+            PREPAL
+            <span>Interaction Design</span>
+          </div>
+        </a>
+        <a class="moreWork" href="./work.html"
+          >more works
+          <i class="iconfont icon-changyongicon-"></i>
+        </a>
+      </div>
 
-        <footer class="contact" id="contact" >
-            <a href="" id="logo"><img src="./images/logo.png" alt=""></a>
-            <div id="phone">
-                <span>WeChat & Phone</span>
-                152 1683 1797
+      <div class="blog">
+        <a class="blogItem1" href="./blogDetail.html">
+          <!-- <img src="./images/douban1.jpg" alt=""> -->
+          <div class="blogIntro">
+            <div class="blogTitle">
+              Modality analysis of Douban APP
             </div>
-            <div id="mail">
-                <span>E-mail</span>
-                wangyuqi1717@163.com
+            <span>2019.12.21</span>
+          </div>
+        </a>
+        <a class="blogItem2" href="">
+          <!-- <img src="./images/douban.jpg" alt=""> -->
+          <div class="blogIntro">
+            <div class="blogTitle">
+              Modify of HUPU
             </div>
-        </footer>
+            <span>2020.1.4</span>
+          </div>
+        </a>
+        <a class="moreBlog" href="./blog.html"
+          >more blogs
+          <i class="iconfont icon-changyongicon-"></i>
+        </a>
+      </div>
 
+      <div class="about" id="about">
+        <div class="aboutItem" id="name">
+          <span>My name is </span>
+          Mitch Wang
+        </div>
+        <div class="aboutItem" id="address">
+          <span>I come from</span>
+          Panzhihua, Sichuan
+        </div>
+        <div class="aboutItem" id="school">
+          <span>I graduate from</span>
+          ECUST, Shanghai
+        </div>
+        <div class="aboutItem" id="hobby">
+          <span>I major in Information Engineering, but I love</span>
+          Design
+        </div>
+      </div>
 
-   </div>
-   <script type="text/javascript" color="255, 255, 255" zindex="-1" opacity=".5" count="200" src="./js/canvas.js"></script>
-
-   <canvas width="100%" height="100%" style="position: fixed; top: 0px; left: 0px; z-index: -1;"></canvas>
-</body>
+      <footer class="contact" id="contact">
+        <a href="" id="logo"><img src="./images/logo.png" alt=""/></a>
+        <div id="phone">
+          <span>WeChat & Phone</span>
+          152 1683 1797
+        </div>
+        <div id="mail">
+          <span>E-mail</span>
+          wangyuqi1717@163.com
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
