--- a/work.html
+++ b/work.html
@@ -41,44 +41,44 @@
 
       <h1>WORKS</h1>
       <div class="works">
-        <a href="" class="workItem">
-          <div class="intro" style="background-image: url();">
+        <a href="" class="workItem" id="wi1">
+          <div class="intro">
             SHARE·BOX
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem">
+        <a href="" class="workItem" id="wi2">
           <div class="intro">
             PREPAL
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem">
+        <a href="" class="workItem" id="wi3">
           <div class="intro">
             HOSPASS
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem">
+        <a href="" class="workItem" id="wi4">
           <div class="intro">
             FICARS
             <span>Interaction Design</span>
           </div>
         </a>
-        <a href="" class="workItem">
-          <div class="intro">
-            SoADM ECUST
-            <span>Visual Design</span>
-          </div>
-        </a>
-        <a href="" class="workItem">
+        <a href="" class="workItem" id="wi5">
           <div class="intro">
             SoD SJTU
             <span>Visual Design</span>
           </div>
         </a>
-        <a href="" class="workItem">
+        <a href="" class="workItem" id="wi6">
           <div class="intro">
+            SoADM ECUST
+            <span>Visual Design</span>
+          </div>
+        </a>
+        <a href="" class="workItem" id="wi7">
+          <div class="intro" style="color: #555;">
             more to come...
           </div>
         </a>
