--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/work.css" />
-    <script src="./js/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
     <script src="./js/Star.js"></script>
     <script src="./js/canvas.js"></script>
   </head>
