--- a/blog.html
+++ b/blog.html
@@ -38,21 +38,32 @@
         </div>
       </nav>
 
+      <h1>BLOGS</h1>
       <div class="blogs">
-        <a href="./blogDetail.html" class="bItem1">
-          <div class="blogImage"></div>
+        <a href="blog_leanUX.html" class="bItem1">
+          <div id="blogImage1"></div>
+          <div class="bIntro">
+            Thoughts on Lean UX
+            <span>2020.2.15</span>
+          </div>
+        </a>
+
+        <a href="blog_Choice.html" class="bItem1">
+          <div id="blogImage2"></div>
+          <div class="bIntro">
+            Choice Overload
+            <span>2020.2.13</span>
+          </div>
+        </a>
+
+        <a href="./blog_Douban.html" class="bItem3">
+          <div id="blogImage3"></div>
           <div class="bIntro">
             Modality analysis of Douban APP
             <span>2019.12.21</span>
           </div>
         </a>
-        <a href="" class="bItem2">
-          <img src="" alt="" />
-          <div class="bIntro">
-            Modify of HUPU
-            <span>2020.1.4</span>
-          </div>
-        </a>
+
         <div class="more">
           more to come...
         </div>
