--- a/blog_Douban.html
+++ b/blog_Douban.html
@@ -103,9 +103,9 @@
       </div>
 
       <div class="pager">
-        <a href="">
+        <a href="./blog_Choice.html">
           previous
-          <span>Misuse of Modality in Douban APP</span>
+          <span>Choice Overload</span>
         </a>
         <a href="">
           next
