--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
           <a href="#contact">CONTACT</a>
         </div>
       </nav>
-      <div class="slogan">I am Mitch.</div>
+      <div class="slogan">
+        Welcome to Yuqi Space
+        <span
+          >The Space is built to display my works and to share my thoughts on
+          design.</span
+        >
+      </div>
       <div class="activity">
         <a class="work1" href="">
           <div class="intro">
@@ -63,18 +69,18 @@
           <!-- <img src="./images/douban1.jpg" alt=""> -->
           <div class="blogIntro">
             <div class="blogTitle">
-              Modality analysis of Douban APP
+              Thoughts on Lean UX
             </div>
-            <span>2019.12.21</span>
+            <span>2020.2.15</span>
           </div>
         </a>
         <a class="blogItem2" href="">
           <!-- <img src="./images/douban.jpg" alt=""> -->
           <div class="blogIntro">
             <div class="blogTitle">
-              Modify of HUPU
+              Choice Overload
             </div>
-            <span>2020.1.4</span>
+            <span>2020.2.13</span>
           </div>
         </a>
         <a class="moreBlog" href="./blog.html"
