--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -58,6 +58,7 @@
         Some people who want to keep with trend may choose the best-seller,
         while someone who want to be unique might like the unpopular one.
         <div id="img1"></div>
+        <div id="img2"></div>
       </div>
 
       <div class="pager">
