--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="blog">
-        <a class="blogItem1" href="./blogDetail.html">
+        <a class="blogItem1" href="./blog_leanUX.html">
           <!-- <img src="./images/douban1.jpg" alt=""> -->
           <div class="blogIntro">
             <div class="blogTitle">
@@ -74,7 +74,7 @@
             <span>2020.2.15</span>
           </div>
         </a>
-        <a class="blogItem2" href="">
+        <a class="blogItem2" href="./blog_Choice.html">
           <!-- <img src="./images/douban.jpg" alt=""> -->
           <div class="blogIntro">
             <div class="blogTitle">
