--- a/blog_Choice.html
+++ b/blog_Choice.html
@@ -44,21 +44,53 @@
           Choice Overload
           <span>2020.2.13</span>
         </div>
-        &emsp; In the face of many choices in shop websites, we may over-think
-        or over-analysis a decision.<br /><br />
+        &emsp; We all might have experience of struggling to make a choice when
+        faced with many similar options? For instance, in shop websites, we may
+        over-think or over-analysis a series of products and end up buying
+        nothing.<br /><br />
         To modify the experience, NN Group suggests that :
         <br />&emsp;1.reduce offerings. <br />&emsp;2.categorize offerings
         <br />&emsp;3.highlight top offerings <br />&emsp;4.help user compare
-        offerings.<br /><br />&emsp;For instance, users may spend time on
-        choosing iPhone cases‘ colors,
+        offerings.<br /><br />&emsp;We could conclude from NN Group's tips that
+        either reducing the number of items or providing more product
+        information for customers to help them make decisions. However, for most
+        companies, cutting the product line would be hard, thus adding specific
+        information about products could be more applicable to reduce choice
+        overload compared to the former.<br />&emsp;For instance, we could
         <span style="font-weight: 900; color: white;"
-          >we could add purchasing data about each item to help user decide,
-          such as popularity, gender, so on and so forth.</span
-        >
-        Some people who want to keep with trend may choose the best-seller,
-        while someone who want to be unique might like the unpopular one.
-        <div id="img1"></div>
-        <div id="img2"></div>
+          >add purchasing data about each item to help user decide, such as
+          popularity, gender, age, so on and so forth.</span
+        ><br />&emsp;Taking iPhone cases' color, for example, users may spend
+        time choosing a color, some people who want to follow the trend may
+        choose the best-seller, while someone who wants to be unique might buy
+        the unpopular ones.<br />&emsp;I've edited Apple Store pages to find out
+        whether it is effective.
+        <div style="text-align: center; margin-top: 60px;">
+          <span style="display: block; font-weight:300;">before</span>
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1dFGzVInMU0TQXemczE2v7eezO4nN4csF69eWXcT44zf72bxDIgBmjGH5y6ohp9WmIrdxJpRzHt*TXb3EtRzLj0!/r"
+            alt=""
+          />
+          <span style="display: block; font-weight:300;margin-top: 30px;"
+            >after</span
+          >
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1WzyAkrvaPKyobIGVD54x3rqPTtX4PGs28ZyelY7ONrSHdYSYFjqLCodbW3QMyj9JEQxHRBjDoxtzyiIbCt0tVo!/r"
+            alt=""
+          />
+          <img
+            style="width: 100%;"
+            src="http://r.photo.store.qq.com/psc?/V11TKo8Q1FxsOO/jASqEt644m*KNERKGtvN1auytDP2HKUHGPbt6a.OQdW*O1IMW.84PFYUYcsn4kzosar2ImSF9V5YkX74gnaXDh96zs4ibj5We*sGLTMdJ*A!/r"
+            alt=""
+          />
+        </div>
+        <br />&emsp;As is shown in the pictures above, extra data let users know
+        about others' bahavior. And this may help people who have no idea make a
+        decision easier because of conformity behavior.<br />&emsp;However, it
+        is still unknown whether the data would let those who have made a
+        decision before going to the website become confused.
       </div>
 
       <div class="pager">
